<?xml version="1.0"?>
<package format="3">
  <name>serial_uart_cpp</name>
  <version>0.0.1</version>
  <description>UART C++ ROS2 node</description>

  <maintainer email="tokyotechdai20@gmail.com">daichi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

